Zmiana wersji Javy na 8